--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,26 +1,22 @@
 {
-  "extends": "../../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2019",
+    "module": "CommonJS",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "declaration": true,
     "declarationMap": true,
     "outDir": "./dist",
     "rootDir": "./",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false
+    "noEmitOnError": true
   },
-  "include": [
-    "*.ts",
-    "*.tsx"
-  ],
+  "include": ["./*.ts", "./*.tsx"],
   "exclude": [
     "node_modules",
     "dist",
