--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
   },
   "homepage": "https://github.com/bigbharatjain/nextjs-password-protect.git",
   "peerDependencies": {
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0",
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0 || ^19.0.0",
@@ -72,5 +72,9 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.4.0"
   }
 }
